<resources>
    <string name="app_name">Restauranis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Buscador</string>
    <string name="button_login">Login</string>
    <string name="button_register">Únete a Restauranis</string>
    <string name="huevo_restauranis">huevo restauranis</string>
    <string name="logo_restauranis_yellow">logo restauranis yellow</string>
    <string name="cargando">CARGANDO...</string>
    <string name="enviar">Enviar</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="localidad">Localidad</string>
    <string name="movil">Móvil</string>
    <string name="texto_registro">¿Aún no estas registrado? Hazlo y aprovecha todas las ventajas</string>
    <string name="olvidada">He olvidado la contraseña</string>
    <string name="recupera">Reestablecer contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_button_solicitud">Solicitar Menú de Grupos</string>
    <string name="text_button_comentarios">Deja tu comentario</string>
    <string name="subtitulo_solicitud">Consulta los menús y las ventajas de ir a cenar con los amigos o la família</string>
    <string name="titulo_solicitud">Solicitud de Grupos</string>
    <string name="titulo_menus">Menús y Carta</string>
    <string name="texto_opinar">Tu opinión es importante para nosotros</string>
    <string name="texto_reservar">Escoja los datos para su reserva</string>
    <string name="home_menu">Home</string>
    <string name="cercanos_menu">Cercanos</string>
    <string name="mejores_valorados_home">Most Valued</string>
    <string name="precio_home">Precio</string>
    <string name="nuevos_home">Nuevos</string>
    <string name="premium_home">Premium</string>
    <string name="cocina_home">Cocina</string>
    <string name="avatar_usuario">avatar usuario</string>
    <string name="foto_1">foto principal del restaurante</string>
    <string name="icono_calendario">icono calendario</string>
    <string name="seleccionar_fecha">Seleccione la Fecha</string>
    <string name="icono_reloj">icono reloj</string>
    <string name="seleccionar_hora">Seleccione la Hora</string>
    <string name="icono_personas">icono personas</string>
    <string name="seleccionar_personas">Seleccione el número de personas</string>
    <string name="descripcion_cercanos">Los restaurantes cerca de ti</string>
    <string name="icono_mas_cercanos">icono mas cercanos</string>
    <string name="descripcion_mejores_valorados">Restaurantes que gustan</string>
    <string name="icono_mas_valorados">icono mas valorados</string>
    <string name="precio">Precio</string>
    <string name="descripcion_precio">Restaurantes por precio</string>
    <string name="icono_mas_precio">icono mas precio</string>
    <string name="nuevos">Nuevos</string>
    <string name="descripcion_nuevos">Restaurantes nuevos en Restauranis</string>
    <string name="icono_mas_nuevos">icono mas nuevos</string>
    <string name="premium">Premium</string>
    <string name="descripcion_premium">Restaurantes premium de Restauranis</string>
    <string name="icono_mas_premium">icono mas premium</string>
    <string name="hint_buscador">Nombre del restaurante, localidad o tipo de cocina</string>
    <string name="icono_buscar">icono buscar</string>
    <string name="icono_reservar">icono reservar</string>
    <string name="icono_solicitud">icono solicitud</string>
    <string name="icono_como_llegar">icono como llegar</string>
    <string name="icono_comentarios">icono comentarios</string>
    <string name="primeros_platos">Primeros Platos</string>
    <string name="segundos_platos">Segundos Platos</string>
    <string name="postres">Postres</string>
    <string name="extras">Extras</string>
    <string name="fecha">Fecha</string>
    <string name="n_personas">Nº Personas</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="comentarios">Comentarios</string>
    <string name="reservar">Reservar</string>
    <string name="boton_llamar">boton llamar</string>
    <string name="icono_compartir">icono compartir restaurante</string>
    <string name="no_gps">Para ver los restaurantes cercanos es necesario conocer su ubicación actual</string>
    <string name="activar_gps">Activar GPS</string>

</resources>
