<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.restauranis.restauranis.NewPassword"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/text_recupera"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:textSize="17dp"
            android:textColor="@color/blanco" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="1"
            android:layout_marginTop="-20dp">

            <EditText
                android:id="@+id/password_recupera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:hint="@string/new_password"
                android:background="@color/blanco"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="1"
            android:layout_marginTop="-20dp">

            <EditText
                android:id="@+id/confirm_password_recupera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:layout_margin="20dp"
                android:hint="@string/confirm_password"
                android:background="@color/blanco"
                android:padding="5dp"
                android:imeOptions="actionSend"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="1"
            android:layout_marginTop="-20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/recupera"
                android:background="@color/groc"
                android:textColor="@color/gris"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/recupera"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
